--- a/README
+++ b/README
@@ -1,10 +1,8 @@
-libcap_utils
+caputils
 
-This is the supporting library for the DPMI. 
 The libary is used by consumers to interface with the measurement stream, and the measurement points use it to construct the measurement frames.
 
 Version 0.3, supports only files.
 Version >0.5, supports network streams (Ethernet, UDP and TCP) and files.
 Version 0.5 and 0.6 are almost the same, version 0.6 has fixed some bugs and added support for full sizem and  variable size frames.
-
-This is to be replaced by libdpmi, which will separate MPs and consumers. 
+Version 0.7 is reassemblied from the numerous different versions and with lots of code fixes. There is no new features.
