git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@1980 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+caputils-0.7.3
+--------------
+
+caputils-0.7.2
+--------------
+
+* Split filtering code from libcaputils to libfilter.
+* Added two more utilities:
+    - capdump - record a stream
+    - capfilter - filter existing stream
+* Added manpages.
+
 caputils-0.7.0
 --------------
 
