stream_read takes caphead pointer instead of charbuffer; manpage additions
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@1999 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 caputils-0.7.3
 --------------
 
+* More man-pages.
+* stream_read takes cap_head pointer instead of char-buffer.
 * Fixing compability issues with linux-2.4
 
 caputils-0.7.2
