moving stream_addr_t functions to a new file
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@2008 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.3
 --------------
 
+	* change: Moving stream_addr_t functions to a new source file: address.c
 	* change: Renamed struct destination_t to stream_addr_t
 	* change: Renamed {create,open,close}stream to stream_{create,open,close}
 	* fix: Fixed capdump.
