--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.3
 --------------
 
+	* fix: minor build-system fixes, mostly related to make dist.
 	* change: adding a third library (libcap_stream) which deals only with
 	          the stream. libcap_utils is utility functions only.
 	* change: rename ethaton.c to utils.c
@@ -11,24 +12,3 @@ caputils-0.7.3
 	* change: more man-pages.
 	* change: stream_read takes cap_head pointer instead of char-buffer.
 	* fix: Fixing compability issues with linux-2.4
-
-caputils-0.7.2
---------------
-
-* Split filtering code from libcaputils to libfilter.
-* Added two more utilities:
-    - capdump - record a stream
-    - capfilter - filter existing stream
-* Added manpages.
-
-caputils-0.7.0
---------------
-
-Based on the 0.5 branch.
-
- * Backwards-compability support
- * Numerous API-fixes, the API is *NOT* compatable with earlier versions, but there
-   is only minor fixes required.
- * Numerous bug-fixes, including endianess-fixes.
- * New tools: capinfo, shows information about capfiles.
- * Uses autotools and pkg-config
