adding logmsg from libmarc
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@2033 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.3
 --------------
 
+	* add: {,v}logmsg from libmarc is more suitable here.
 	* change: const correctness, fixing warnings.
 	* change: using size_t where appropriate (e.g. fread)
 	* change: made fields in struct stream unsigned.
