git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@2129 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.3
 --------------
 
+	* add: filter_*_set functions
 	* add: stream_addr_str() to set a local filename easily.
 	* add: stream_addr_type() to get type in host order
 	* change: splitting filter structs so the packed and unpacked are
