--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.4
 --------------
 
+	* add: including pcap2cap.
 	* add: support for dropping groups and leading zeros in ethernet
 	       addresses, e.g. 01::01 is read as 01:00:00:00:00:01
 	* add: support for address prefix.
