Fixed bug in fill_buffer.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+caputils-0.7.5
+--------------
+
+	* fix: select call in fill_buffer would not propagate errors properly so
+	       SIGINT would not be caught by user and thus stuck in infinite
+	       loop.
+
 caputils-0.7.4
 --------------
 
