--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.6
 --------------
 
+	* change: capdump --marker now takes a port number.
 	* add: functions for working with timepico.
 	* add: improvements to capshow.
 	* fix: asorted bugs related to new buffering algorithm and capfiles.
