--- a/man/capdump.1
+++ b/man/capdump.1
@@ -31,6 +31,11 @@ buffer might not be fully utilized. High timeouts will fill the buffer but may
 instead cause drops because while it drains the buffer OS starts dropping
 packets. Default is 1000ms. 
 .TP
+\fB\-b\fR, \fB\-\-bufsize\fR=\fISIZE\fR
+Use a buffer of \fISIZE\fP bytes or 0 for default. The actual default size
+depends on the source stream. Capfiles uses 4096 bytes and ethernet 175k
+bytes.
+.TP
 \fB\-\-marker\fR=\fIPORT\fR
 Split stream based on marker packet on port \fiPORT\fP. It looks for a specific
 packet in the stream and once found it stops the current output and starts
