--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.7
 --------------
 
+	* add: support for AND/OR in filter.
 	* add: hexdump_str() which is the same as old hexdump() but saves to a
 	       string instead of writing to FILE.
 	* add: progress report to capdump.
