--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+caputils-0.7.8
+--------------
+
+	* fix: is_marker properly returns dst port instead of zero when passing
+	       zero as port.
+
 caputils-0.7.7
 --------------
 
