--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 caputils-0.7.9
 --------------
 
+	* change: stream_read now drops invalid measurement frames.
+	* fix: capdump properly handles SIGTERM.
 	* change: show localtime instead of UTC (but it show timezone as well)
 	* change: changed marker report to match progress report.
 
