--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+caputils-0.7.9
+--------------
+
+  * capdump output improvements.
+  * Drops invalid measurement frames.
+
 caputils-0.7.8
 --------------
 
