--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.9
 --------------
 
+	* fix: [capinfo] handle when duration is less than one second.
 	* add: [capinfo] show mampids
 	* add: --filter-mode argument.
 	* fix: capinfo now properly resets the packet counters when using
