--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.10
 ---------------
 
+	* add: [capshow] support for ARP.
 	* add: [capshow] support for showing timestamps relative to first
 	       packet. Enabled by default.
 	* fix: [gcc 3.3] using alias instead of weakref for be64toh workaround.
