Intending to split libcaputils manpages into sections reading, writing and stats.

--- a/man/libcaputils_reading.3
+++ b/man/libcaputils_reading.3
@@ -1,4 +1,4 @@
-.TH libcaputils 3 "3 Aug 2011" "BTH" "Measurement Area Manual"
+.TH libcaputils_reading 3 "3 Aug 2011" "BTH" "Measurement Area Manual"
 .SH NAME
 libcaputils \- MA frame capture, stream library and utilities.
 .SH SYNOPSIS
