--- a/man/libcaputils_reading.3
+++ b/man/libcaputils_reading.3
@@ -1,18 +1,49 @@
-.TH libcaputils_reading 3 "3 Aug 2011" "BTH" "Measurement Area Manual"
+.TH libcaputils_reading 3 "28 Aug 2012" "BTH" "Measurement Area Manual"
 .SH NAME
 libcaputils \- MA frame capture, stream library and utilities.
 .SH SYNOPSIS
 .nf
 .B #include <caputils/caputils.h>
 .sp
-.BI "long stream_read(struct stream* " st ", cap_head** " header ", const struct filter* " filter ");"
+.BI "int stream_open(stream_t* " stptr ", const stream_addr_t* " addr ", const char* " iface ", size_t " buffer_size ");"
+.BI "int stream_add(stream_t " st ", const stream_addr_t* " addr ");"
+.BI "int stream_from_getopt(stream_t* " st ", char* " argv "[], int " optind ", int " argc ", const char* " iface ", const char* " defaddr ", const char* " program_name ", size_t " buffer_size ");"
+.BI "int stream_close(stream_t " st ");"
+.BI "int stream_read(stream_t " st ", cap_head** " header ", const struct filter* " filter ", struct timeval* " timeout ");"
+.BI "int stream_peek(stream_t " st ", cap_head** " header ", const struct filter* " filter ");"
 .SH DESCRIPTION
-.BR stream_read()
-reads a frame from the stream \fIst\fP and if \fIfilter\fP is non-null only
-frames matching the filter is returned. The result is stored in \fIheader\fP and
-references internal memory. If you intend to modify or store the frame for a
-longer period of time the memory must be copied. For offline streams (i.e.
-capfiles) -1 can be returned to signal EOF. On errors \fIheader\fP is undefined.
+.TP
+.BR stream_open
+Open a new stream using address provided in \fIaddr\fP. Ethernet streams
+require \fIiface\fP to be set but other types ignore it and can safely be but to
+NULL if you know the address type isn't ethernet. \fIbuffer_size\fP should be
+kept to zero (indicating default size) unless you need a specific size for the
+internal packet buffer.
+.TP
+.BR stream_add
+For ethenet based streams it associates another multicast address with this
+stream.
+.TP
+.BR stream_from_getopt
+Shorthand for opening multiple streams from command-line arguments. Calls
+stream_open followed by stream_add, with error checking. Errors is printed on
+stderr.
+.TP
+.BR stream_close
+Closes the stream referenced by \fIst\fP. No operations is allowed on the stream
+after this point.
+.TP
+.BR stream_read
+read the next matching packet from stream \fIst\fP. A pointer to the packet in
+an internal buffer is returned via \fIheader\fP. If you intend to modify or
+store the packet for a longer period of time the memory must be copied. For
+offline streams (i.e. capfiles) -1 can be returned to signal EOF. On errors
+\fIheader\fP is undefined. If \fItimeout\fP is non-null the function will not
+block and will return EAGAIN if timeout is reached.
+.TP
+.BR stream_peek
+Like stream_read but does not pop the packet from the buffer. Return EAGAIN if
+there is no packet in the buffer. This call never blocks.
 .PP
 .SH RETURN VALUE
 All functions return zero if successful and unless otherwise specified non-zero
@@ -22,6 +53,9 @@ errors. Use \fBcaputils_error_string\fP to get a string that describes the error
 .TP
 .BR EINVAL
 Invalid parameter passed, e.g. invalid stream or a null-pointer.
+.TP
+.BR EAGAIN
+A timeout has occured.
 .SH AUTHOR
 Written by Patrik Arlos <patrik.arlos@bth.se> and David Sveningsson <david.sveningsson@bth.se>.
 .SH "SEE ALSO"
