--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.11
 ---------------
 
+	* fix: [capmerge] fix bug where it only sorted the first 10k packets.
 	* fix: [capfilter] make capfilter actually work.
 	* fix: [capinfo] removing extra newline after marker info.
 	* fix: [filter] update documentation.
