--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 caputils-0.7.14
 ---------------
 
+	* fix: timepico_from_string requires long long on some platforms.
 	* add: [capshow] support for max matched packets.
 	* add: [capinfo] show both packet count and bytes per protocol.
 	* add: [pcap2cap] support for specifying capture interface.
