[capdump] support for setting stream comment from marker

--- a/man/capdump.1
+++ b/man/capdump.1
@@ -75,6 +75,9 @@ Append. Retain the previous trace and append packets to it (the marker will also
 be included in the trace)
 .RE
 .TP
+\fB\-\-marker\-comment
+Use marker comment as the stream comment.
+.TP
 \fB\-h\fR, \fB\-\-help
 Short help.
 .TP
