install dumper script by default

--- a/man/capdump.1
+++ b/man/capdump.1
@@ -66,8 +66,8 @@ marker key (domain specific)
 When used together with --marker-format the mode determines what to do when a
 filename collision is detected.
 .RS
-.IP I (default)
-Increment.  Append a sequential number after the filename.
+.IP I
+Increment (default). Append a sequential number after the filename.
 .IP O
 Overwrite. Discard the previous trace and overwrite using the same filename
 .IP A
