--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ caputils-0.7.16
 ---------------
 
 	* add: connection_id: function to determining an id for a connection
+	* add: igmp, ospf
 	* add: stream_read_cb: higher-level stream_read for easier consumers.
 	* fix: misc issues found during fuzzing.
 	* add: additional tests
